--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,21 @@
             <artifactId>assertj-core</artifactId>
             <version>1.7.0</version>
         </dependency>
+        <dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+		<dependency>
+  			<groupId>com.github.mifmif</groupId>
+  			<artifactId>generex</artifactId>
+  			<version>0.0.4</version>
+		</dependency>
+		<dependency>
+    		<groupId>log4j</groupId>
+    		<artifactId>log4j</artifactId>
+   			 <version>1.2.17</version>
+		</dependency>	
     </dependencies>
     <build>
         <plugins>
