--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <version>${serenity.version}</version>
         </dependency>
         <dependency>
+			<groupId>net.serenity-bdd</groupId>
+			<artifactId>core</artifactId>
+			<version>1.0.47</version>
+		</dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.7</version>
