Resources modifications, Remove other mongo methods dependencies

--- a/src/test/resources/servers/gourmondo_uk_test/checkout/RegularCheckoutTest.properties
+++ b/src/test/resources/servers/gourmondo_uk_test/checkout/RegularCheckoutTest.properties
@@ -1,5 +1,5 @@
-email=ciprian_mocian@yahoo.com
-password=tetetete
+email=gourmondoevotest@gmail.com
+password=Gourmondo.test
 product1=1000815001
 product2=2000025832
 product3=1000683101
